# core-utils

./: .gitignore  .gitmodules  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  make.ps1  make.sh
.devcontainer/: Dockerfile  devcontainer.json
aaaa/: archive-manager  clink.json  development-package-utils.sh  fuzzy-finder.json  package-utils.sh  powershell.json  ubuntu-restricted-extras.json
cmd/core-utils/: main.go
cmd/core-utils/install/: dependency_linuxplatform.go  dependency_windowsplatform.go  lib.go  main.go  vars.go
cmd/core-utils/uninstall/: main.go  vars.go
cmd/directory-functions/count-dir/: main.go  main_test.go
cmd/directory-functions/cpdir/: main.go
cmd/directory-functions/direxists/: main.go
cmd/directory-functions/dirname/: main.go
cmd/directory-functions/finddir/: main.go
cmd/directory-functions/lhiden-dir/: main.go
cmd/directory-functions/lhidend/: main.go
cmd/directory-functions/listdir/: main.go
cmd/directory-functions/mkdirc/: main.go
cmd/directory-functions/rm-empty-dirs/: main.go
cmd/directory-functions/rmdirc/: main.go
cmd/file-functions/basename/: main.go
cmd/file-functions/count-file/: main.go
cmd/file-functions/file-contain/: main.go
cmd/file-functions/file-encoding/: main.go
cmd/file-functions/file-extension/: main.go
cmd/file-functions/fileexists/: main.go
cmd/file-functions/filename/: main.go
cmd/file-functions/findfile/: main.go
cmd/file-functions/lhiden-file/: main.go
cmd/file-functions/lhidenf/: main.go
cmd/file-functions/move-files-to-parent/: main.go
cmd/file-functions/mv-files-to-parent/: main.go
cmd/file-functions/open-image/: main.go
cmd/file-functions/open-md/: main.go
cmd/file-functions/rm-file-lines/: main.go
cmd/file-functions/rmfile/: main.go
cmd/file-functions/writefile/: main.go
cmd/git-functions/git-add-script-perm/: main.go
cmd/git-functions/git-cherrypick-master/: main.go
cmd/git-functions/git-cherrypick-master-continue/: main.go
cmd/git-functions/git-config-user/: main.go
cmd/git-functions/git-repo-backup/: main.go
cmd/git-functions/git-repo-restore-backup/: main.go
cmd/git-functions/git-reset-file/: main.go
cmd/git-functions/git-reset-hard-origin/: main.go
cmd/git-functions/git-set-config/: main.go
cmd/git-functions/git-undo-last-commit/: main.go
cmd/git-functions/github-change-url/: main.go
cmd/git-functions/github-download/: main.go
cmd/git-functions/github-latest-version/: main.go
cmd/logger-functions/debug-log/: main.go
cmd/logger-functions/error-log/: main.go
cmd/logger-functions/header-log/: main.go
cmd/logger-functions/info-log/: main.go
cmd/logger-functions/json-log/: main.go
cmd/logger-functions/ok-log/: main.go
cmd/logger-functions/prompt-log/: main.go
cmd/logger-functions/separator-log/: main.go
cmd/logger-functions/title-log/: main.go
cmd/logger-functions/warn-log/: main.go
cmd/package-functions/app-package-hold-manager/: main.go
cmd/package-functions/appx-package-list/: main.go
cmd/package-functions/appx-package-uninstall/: main.go
cmd/package-functions/apt-clean/: main.go
configs/: linux-cmds-build-ignore  windows-cmds-build-ignore
internal/dir/: dir.go
internal/generic/: generic.go
internal/libs/: config.go  env_manager.go  lib.go  message.go  vscode_info.go
internal/testutils/: util.go
libs/: const_lib.go  development-lib.ps1  development-lib.sh  dirs_lib.go  generic.ps1  generic.sh  other-lib.ps1  package-lib.ps1  package-lib.sh  package.ps1  package.sh  scoop-lib.ps1  user-lib.ps1  winget-lib.ps1
libs/1/: development-lib.sh  generic.sh  package-lib.ps1  package-lib.sh  user-lib.ps1
old/: make.ps1
old/libs/: generic.ps1  package.sh
package/: pyproject.toml
package/coreutils/: directoryfunctions.py  filefunctions.py  gitfunctions.py  loggerfunctions.py  packagefunctions.py  setup_process.py  systemfunctions.py  toolsfunctions.py
package/coreutils/entities/: config.py
package/coreutils/libs/: const_lib.py  dirs_lib.py  generic_lib.py
package/coreutils/libs/processors/: alias_processor.py  extract_processor.py  message_processor.py  run_bin_processor.py  script_processor.py  script_updater_processor.py  service_processor.py  start_apps_processor.py  which_processor.py
package/coreutils/resources/shell-scripts/: init-bash-shell.sh  init-fish-shell.fish  init-ksh-shell.ksh  init-pwsh-shell.ps1  init-shell.ps1  init-shell.sh
package/coreutils/resources/shell-scripts/apps/: delete-broken-symlinks.sh  gsudopwsh.ps1  pgrepc.ps1  pkillc.ps1  snap-clean.sh  sudopwsh-old.ps1  sudopwsh.ps1  uptime.ps1
package/coreutils/resources/shell-scripts/libs/: download.ps1  has-internet.ps1  has-internet.sh  pgrep.ps1  pkill.ps1  run-line-as-command.ps1  run-line-as-command.sh  snap-clean.sh  snap-uninstall.sh  style-prompt.ps1  style-prompt.sh  system-functions.ps1  tools-functions.ps1  tools-functions.sh  trash.ps1  ui-functions.ps1
scripts/: 0_generic-vars.ps1  0_generic-vars.sh  1_init-shell.ps1  1_init-shell.sh  appimage-manager.sh  builder.sh  directory-functions.ps1  directory-functions.sh  file-functions.ps1  file-functions.sh  git-functions.ps1  git-functions.sh  logger-functions.ps1  logger-functions.sh  package-functions.ps1  package-functions.sh  pipc.sh  start.bat  start.sh  sudoexe.sh  system-functions.ps1  tools-functions.ps1  tools-functions.sh  ui-functions.ps1  ui-functions.sh
scripts/apps/bash/: pipc  (+11 more)
scripts/commands-files/: git-cmd  git-global-cmd
scripts/directory-funcs/: fileexists.py
scripts/libs/: style-prompt.ps1  style-prompt.sh
scripts/profiles/: init-bash-shell.sh  init-fish-shell.fish  init-ksh-shell.ksh  init-pwsh-shell.ps1  init-zsh-shell.zsh
scripts/py-scripts/: __init__.py  filefunctions.py  gitfunctions.py  loggerfunctions.py  packagefunctions.py  post_install.py  pyproject.toml  varfunctions.py
scripts/py-scripts/libs/: generic_libs.py
scripts/shell-scripts/: 0_generic-vars.ps1  0_generic-vars.sh  1_init-shell.ps1  1_init-shell.sh  git-functions.ps1  git-functions.sh  package-functions.ps1  package-functions.sh  system-functions.sh
(+196 files in other folders)
