[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coreutils"
version = "1.0.5"
description = "Commands utils for OS"
authors = [
    { name = "José M. C. Noronha", email = "zecarneiro44@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["colorama"]

[project.entry-points."console_scripts"]
# POST INSTALL
postinstall = "post_install:run"

# VAR Functions
SHELL_PROFILE_SCRIPT = "varfunctions:SHELL_PROFILE_SCRIPT"
CUSTOM_SHELL_PROFILE_SCRIPT = "varfunctions:CUSTOM_SHELL_PROFILE_SCRIPT"
OS_NAME = "varfunctions:OS_NAME"

# File Functions
fileexists = "filefunctions:fileexists"
fileextension = "filefunctions:fileextension"
filename = "filefunctions:filename"
deletefile = "filefunctions:deletefile"
fileenconding = "filefunctions:fileenconding"
writefile = "filefunctions:writefile"
delfilelines = "filefunctions:delfilelines"
countfiles = "filefunctions:countfiles"
movefilestoparent = "filefunctions:movefilestoparent"
lf = "filefunctions:lf"
filecontain = "filefunctions:filecontain"
findfile = "filefunctions:findfile"
finddir = "filefunctions:finddir"

# Git Functions
gitresethardorigin = "gitfunctions:gitresethardorigin"

# Logger Functions
log = "loggerfunctions:log"
errorlog = "loggerfunctions:errorlog"
infolog = "loggerfunctions:infolog"
debuglog = "loggerfunctions:debuglog"
warnlog = "loggerfunctions:warnlog"
oklog = "loggerfunctions:oklog"
promptlog = "loggerfunctions:promptlog"
titlelog = "loggerfunctions:titlelog"
headerlog = "loggerfunctions:headerlog"
separatorlog = "loggerfunctions:separatorlog"
jsonlog = "loggerfunctions:jsonlog"

# Package Functions
npmupgrade = "packagefunctions:npmupgrade"
npmlist = "packagefunctions:npmlist"
npmclean = "packagefunctions:npmclean"

[tool.setuptools]
py-modules = ["post_install", "filefunctions", "gitfunctions", "loggerfunctions", "packagefunctions", "varfunctions"]

[tool.setuptools.package-data]
# Format: package_name = ["pattern(s)"]
#coreutils = ["resources/*", "data/*.json"]
#coreutils = ["vendor/*"]
